# KaggleOps

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  cloudbuild.yaml  mise.toml  pyproject.toml
.devcontainer/: devcontainer.json  post-create.sh
.github/: README.md
.github/workflows/: build-push-image.yml  push-kaggle-dependencies.yaml  push-kaggle-deps.yml  push-kaggle-submission.yaml  push-kaggle-submit.yml  python-ci.yaml
codes/submission/: code.ipynb  code.template.ipynb  kernel-metadata.json  kernel-metadata.template.json
configs/vertex/: push-artifacts-job.yaml  training-job.yaml
docs/: 01_infra.md  01_infrastructure.md  02_github_actions.md  experiment_flow.md  infrastructure.md
scripts/: create_swap.sh  init_tfvars.sh  scrape_competition.sh  set_github_secrets.sh  setup_mise.sh  wait_for_vertex_job.sh
src/: inference.py  run_vertex_training.py  settings.py  submit.py  train.py
src/kaggle/: check.py  download.py  metadata.py  upload.py  write.py
src/kaggle_ops/: check.py  cusom_job.py  download.py  parse_exp_names.py  push.py  run_vertex_training.py  upload.py  utils.py  write.py
src/kaggle_ops/utils/: customhub.py  utils.py
src/kaggle_utils/: check.py  download.py  upload.py  write.py
src/kaggle_utils/utils/: customhub.py
terraform/: versions.tf
terraform/environments/dev/: backend.tf  main.tf  terraform.tfvars.example  variables.tf
terraform/modules/artifact-registry/: main.tf  outputs.tf  variables.tf
terraform/modules/gcs-bucket/: main.tf  outputs.tf  variables.tf
terraform/modules/service-account/: main.tf  outputs.tf  variables.tf
terraform/modules/vertex-ai/: main.tf  outputs.tf  variables.tf
terraform/modules/workload-identity/: main.tf  outputs.tf  variables.tf
tests/: test_placeholder.py
